--- a/src/components/frontpage/FrontPage.css
+++ b/src/components/frontpage/FrontPage.css
@@ -8,6 +8,7 @@
     overflow-wrap: break-word;
     margin-left: 2px;
     margin-right: 2px;
+    border: 1px solid red;
 }
 .picture-container{
     flex: 1;
@@ -46,11 +47,6 @@
         height: auto;
         border: none;
     }
-
-    /* .picture-container{
-        width: auto;
-        height: auto;
-    } */
 }
 
 .description-container h1{
