--- a/src/components/loginthrough/LoginThrough.css
+++ b/src/components/loginthrough/LoginThrough.css
@@ -26,8 +26,7 @@
 
 @media(max-width: 522px){
     .login-through{
-        width: auto;
-        min-width: 185px;
+        max-width: 234px;
     }
 }
 
